Add full Graphite query. Creates json/jsonp table format for afterquery js charting library. Also creates CSV format.